Added new demo joints

--- a/ISCoin.ipynb
+++ b/ISCoin.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,23 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-24 09:33:57,581,581 | ISCoin - 10.30.5.158 | DEBUG    [iscoin.py:59] Initializing devices in constructor\n",
-      "2025-02-24 09:33:57,583,583 | ISCoin - 10.30.5.158 | INFO     [iscoin.py:106] Reinitializing devices with IP 10.30.5.158\n",
-      " * Robot model\n",
-      "2025-02-24 09:33:57,584,584 | ISCoin - 10.30.5.158 | INFO     [iscoin.py:108]  * URScriptExt\n",
-      "2025-02-24 09:33:59,191,191 | ISCoin - 10.30.5.158 | INFO     [iscoin.py:110]  * RobotiqTwoFingersGripper\n",
-      "2025-02-24 09:33:59,194,194 | ISCoin - 10.30.5.158 | INFO     [iscoin.py:112]  * RobotiqWristCamera\n",
-      "2025-02-24 09:33:59,196,196 | ISCoin - 10.30.5.158 | INFO     [iscoin.py:114]  *** Devices initialized\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from URBasic import ISCoin\n",
     "\n",
@@ -55,18 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TCP:    TCP6D([-0.12354035675278618, -0.38458555375881753, 0.31683917121929484, -0.10769391640652619, -3.13786670832971, -0.01242479938878734])\n",
-      "Joints: Joint6D([-1.5473020712481897, -1.9327970943846644, -1.0744229555130005, -1.7105843029417933, 1.577850103378296, 0.08735296875238419])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'TCP:    {iscoin.robot_control.get_actual_tcp_pose()}')\n",
     "print(f'Joints: {iscoin.robot_control.get_actual_joint_positions()}')"
@@ -74,18 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Joints are at Joint6D([-1.5473020712481897, -1.9327804050841273, -1.074429988861084, -1.710613866845602, 1.577862024307251, 0.08729918301105499]) - going to Joint6D([1.586406, -1.249279, 0.533972, -0.463469, -0.884159, 1.045896])\n",
-      "Joints are at Joint6D([1.5863299369812012, -1.2494397920421143, 0.5338547865497034, -0.46366532266650395, -0.8841102758990687, 1.0457878112792969]) - going to Joint6D([1.586772, -1.249092, 0.533677, -0.447469, 0.667511, 1.045982])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import radians\n",
     "from URBasic import Joint6D\n",
@@ -93,11 +61,23 @@
     "iscoin.robot_control.reset_error()\n",
     "\n",
     "# Move joints into positions\n",
-    "waypoints = [Joint6D.createFromRadians(1.586406, -1.249279, 0.533972, -0.463469, -0.884159, 1.045896), Joint6D.createFromRadians(1.586772, -1.249092, 0.533677, -0.447469, 0.667511, 1.045982)]\n",
+    "waypoints = [\n",
+    "    Joint6D.createFromRadians(1.1945080757141113, -1.126845733528473, 1.0483668486224573, -1.59875549892568, -1.5213754812823694, 1.046877384185791),\n",
+    "    Joint6D.createFromRadians(1.7649006843566895, -1.1278104347041626, 1.048335377370016, -1.5995241604247035, -1.4845483938800257, 1.0468727350234985),\n",
+    "    Joint6D.createFromRadians(1.5492383241653442, -1.4934492421201249, 1.5340636412249964, -1.7066379986205042, 0.101870097219944, 0.9368764162063599),\n",
+    "    Joint6D.createFromRadians(1.5487648248672485, -1.4930702310851593, 1.5343602339373987, -1.7022167644896449, -1.6295493284808558, 0.936877965927124),\n",
+    "    Joint6D.createFromRadians(0.4645763635635376, -1.4930564922145386, 1.5344775358783167, -1.7022696934142054, -1.629660431538717, 0.9369185566902161),\n",
+    "]\n",
     "print(f'Joints are at {iscoin.robot_control.get_actual_joint_positions()} - going to {waypoints[0]}')\n",
     "iscoin.robot_control.movej(waypoints[0], a = radians(80), v = radians(60))\n",
     "print(f'Joints are at {iscoin.robot_control.get_actual_joint_positions()} - going to {waypoints[1]}')\n",
-    "iscoin.robot_control.movej(waypoints[1], a = radians(80), v = radians(60))"
+    "iscoin.robot_control.movej(waypoints[1], a = radians(80), v = radians(60))\n",
+    "print(f'Joints are at {iscoin.robot_control.get_actual_joint_positions()} - going to {waypoints[2]}')\n",
+    "iscoin.robot_control.movej(waypoints[2], a = radians(80), v = radians(60))\n",
+    "print(f'Joints are at {iscoin.robot_control.get_actual_joint_positions()} - going to {waypoints[3]}')\n",
+    "iscoin.robot_control.movej(waypoints[3], a = radians(80), v = radians(60))\n",
+    "print(f'Joints are at {iscoin.robot_control.get_actual_joint_positions()} - going to {waypoints[4]}')\n",
+    "iscoin.robot_control.movej(waypoints[4], a = radians(80), v = radians(60))"
    ]
   },
   {
@@ -109,20 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Needed only once\n",
     "iscoin.gripper.activate()"
@@ -130,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,20 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iscoin.gripper.deactivate()"
    ]
@@ -172,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,17 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# END"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "iscoin-KAm6-cic-py3.10",
+   "display_name": "iscoin",
    "language": "python",
    "name": "python3"
   },
